# rusty-brain

./: Cargo.toml
nnn/: Cargo.toml
nnn/src/: activations.rs  gene.rs  lib.rs
shared/config/src/: lib.rs
shared/gene/: Cargo.toml
shared/gene/src/: lib.rs
shared/genome/: Cargo.toml
src/: activations.rs  aggregations.rs  config.rs  gene.rs  main.rs
