[package]
name = "nnn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../shared/config" }
gene = { path = "../shared/gene" }
genome = { path = "../shared/genome" }

rand = "0.8.5"